# parsec-vdd

./: CMakeLists.txt  README.md  virtual-display.cpp
include/: HMain.cpp  Main.h  MainUI.h  parsec-vdd.h
res/: Main.ui
